# GitHub-Follower-Checker

./: .gitignore  CHANGELOG.md  GitHubFollowerCheckerCLI.py  GitHubFollowerCheckerGUI.py  README.en.md  README.md  gfc_controller.py  gfc_core.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
docs/superpowers/plans/: 2026-07-18-flet-redesign.md
docs/superpowers/specs/: 2026-07-18-flet-redesign-design.md
tests/: test_github_follower_checker.py
