[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "github-follower-checker"
version = "1.2.0"
description = "Desktop-Tool zum Analysieren von GitHub-Follower/Following-Beziehungen"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "customtkinter>=5.2.2",
    "keyring>=24",
    "pillow>=9",
]

[project.urls]
Repository = "https://github.com/0xGI0/GitHub-Follower-Checker"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.gui-scripts]
github-follower-checker = "GitHubFollowerCheckerGUI:main"

[project.scripts]
github-follower-checker-cli = "GitHubFollowerCheckerCLI:main"

[tool.setuptools]
py-modules = ["GitHubFollowerCheckerGUI", "GitHubFollowerCheckerCLI"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
