[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "github-follower-checker"
version = "2.0.0"
description = "Desktop-Tool zum Analysieren von GitHub-Follower/Following-Beziehungen"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "flet>=0.86,<0.87",
    "keyring>=24",
]

[project.urls]
Repository = "https://github.com/0xGI0/GitHub-Follower-Checker"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.gui-scripts]
github-follower-checker = "GitHubFollowerCheckerGUI:main"

[project.scripts]
github-follower-checker-cli = "GitHubFollowerCheckerCLI:main"

[tool.setuptools]
py-modules = ["gfc_core", "gfc_controller", "GitHubFollowerCheckerGUI", "GitHubFollowerCheckerCLI"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
